- обновить общую логику генерации результата